# doradd

./: .clang-format  .gitignore  .gitmodules  README.md  benchmark.py  benchmark_checkpoint_threshold.py  build_ycsb.sh  checkpoint_batch_size_summary.csv  install_deps.sh  parse.py  parse2.py  parse_latency.py  run_ycsb.sh
app/: CMakeLists.txt  atomic_exchange_profile.cpp  chain.cc  db.hpp  rocksdb_test.cc  tpcc.cc  txn_profile.cpp  ycsb.cc
app/pipeline-profile/: core.hpp  test.cc
app/prefetch/arr_seq/: arr_seq.cpp  run.sh
app/prefetch/bin_search/: bin_search.cpp  run.sh
app/prefetch/hashmap/: benchmark.cpp
app/rocksdb/: test_rocksdb.cpp
app/tpcc/: constants.hpp  db.hpp  fastrandom.hpp  generator.hpp  rand.hpp  tables.hpp
app/ycsb/: constants.hpp  db.hpp
app/ycsb/gen-log/: generate_ycsb_zipf.cc  generator  ycsb_uniform_no_cont.txt
scripts/: generate_ycsb.py  install_dependency.sh  latency-throughput.py  p99-latency.py  prepare_log.sh  run_doradd_ycsb.sh  run_latency_expr.sh  sched_ohead.py  set_perf_freq.sh  setup.sh  throughput_core_count.sh  ycsb_latency.sh  zipfian_core_cnt.sh
scripts/chain/mixed/: constants.hpp  generate_mixed.cc
scripts/chain/nft/: constants.hpp  generate_nft.cc
scripts/chain/p2p/: constants.hpp  generate_p2p.cc
scripts/chain/uniswap/: constants.hpp  generate_uniswap.cc
scripts/plot/: plot_latency.p  sched_ohead.p
scripts/run-chain/: entire.sh  parse-res.py  setup.sh
scripts/run-tpcc/: entire-expr.sh  res-parse.py  setup.sh
scripts/tpcc/: constants.py  entire-expr.sh  gen_csv.py  gen_log.sh  generate_tpcc.py  merge-dorad-caracal-res.sh  prepare_log.sh  rand.py  read_bin.py  run_all_tpcc.sh  setup.sh
scripts/tpcc/gen-log/: dump_txn.cc  generate_tpcc.py
scripts/ycsb/: prepare_log.sh  run_all_ycsb.sh
scripts/zipf/: generate_ycsb_zipf.cc
src/bench/: CMakeLists.txt  a.out  atomic_exchange_profile.cpp  chain.cc  constants.hpp  db.hpp  tpcc.cc  tpcc_macros.m4  txn_profile.cpp  ycsb.cc
src/bench/.cache/clangd/index/: constants.hpp.D29AA4B0E5B331C3.idx  db.hpp.7D0841B8A2DE981D.idx  ycsb.cc.B3EA4D86551653AB.idx
src/bench/build-dbg/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/bench/chain/: constants.hpp  db.hpp  entries.hpp  generator.hpp  generic_macros.hpp  macros.hpp  tables.hpp
src/bench/pipeline-profile/: Makefile  core.hpp  test.cc
src/bench/prefetch/bin_search/: benchmark.cpp  run.sh
src/bench/prefetch/coro_bin_search/: Makefile  coro_infra.h
src/bench/prefetch/hashmap/: benchmark.cpp  hashmap.hpp
src/bench/tpcc/: constants.hpp  db.hpp  entries.hpp  generator.hpp  tables.hpp
src/deterdb/: config.hpp  deterdb.hpp  dispatcher.hpp  dispatcher_old.hpp  hugepage.hpp  perf.hpp  pin-thread.hpp  pipeline.hpp  rpc_handler.hpp  spscq.hpp  txcounter.hpp  warmup.hpp
src/doradd/: Makefile.checkpoint_example  Makefile.gc  VERSIONED_CHECKPOINTS.md  checkpoint.hpp  checkpoint_stats.hpp  checkpoint_storage.hpp  checkpointer.hpp  checkpointer_simple.hpp  config.hpp  db_dump.cpp  dispatcher.hpp  gc_standalone.cpp  hugepage.hpp  pipeline.hpp  recovery.hpp  rpc_handler.hpp  spscq.hpp  txcounter.hpp  versioned_checkpoint_example.cpp  warmup.hpp
src/misc/: cpp_rand.hpp
src/request-inter-arrival/: inter_arrival.hpp
src/rt/cpp/: row.cpp
src/storage/: garbage_collector.hpp  keyvaluestore.hpp  rocksdb.hpp  sqlite.hpp
